@@ -134,7 +134,7 @@ This file is generated! See scripts/docs_collector.py
 |<<metricbeat-metricset-system-process_summary,process_summary>>   
 |<<metricbeat-metricset-system-raid,raid>>   
 |<<metricbeat-metricset-system-socket,socket>>   
-|<<metricbeat-metricset-system-socket_summary,socket_summary>> experimental[]  
+|<<metricbeat-metricset-system-socket_summary,socket_summary>>   
 |<<metricbeat-metricset-system-uptime,uptime>>   
 |<<metricbeat-module-traefik,traefik>>  beta[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
 .1+| .1+|  |<<metricbeat-metricset-traefik-health,health>> beta[]  
