@@ -7,6 +7,7 @@
     - process         # Per process metrics
     - process_summary # Process summary
     - uptime          # System Uptime
+    - socket_summary  # Socket summary
     #- core           # Per CPU core usage
     #- diskio         # Disk IO
     #- filesystem     # File system usage for each mountpoint
