@@ -7,6 +7,7 @@
     - network
     - process
     - process_summary
+    - socket_summary
     #- core
     #- diskio
     #- socket
